--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
 </head>
 <body>
 
+<section>
+  <div>
+    <h1>Send us a sweet little note</h1>
+
+    <form class="" action="index.html" method="post">
+      <div>
+        <label for="name">Name</label>
+        <input id="name" required>
+      </div>
+      <div>
+        <label for="email">Your Email</label>
+        <input id="email" type="email" placeholder="me@me.com" required>
+      </div>
+      <div>
+        <label for="email">Your Email</label>
+        <input id="email" type="email" placeholder="me@me.com" required>
+      </div>
+    </form>
+
+
+  </div>
+</section>
 
 
 </body>
