--- a/index.html
+++ b/index.html
@@ -11,42 +11,41 @@
 <body>
 
 <section class="contact pad-t-2 pad-b-2">
-  <div>
+  <div class="max-length">
     <h1>Send us a sweet little note</h1>
 
-    <form class="" action="index.html" method="post">
-      <div>
+    <form class="push-0" method="POST" action="https://formspree.io/pokh0006@algonquinlive.com">
+      <div class="push">
         <label for="name">Name</label>
         <input id="name" required>
       </div>
 
-      <div>
+      <div class="push">
         <label for="email">Your Email</label>
         <input id="email" type="email" placeholder="me@me.com" required>
       </div>
 
-      <div>
+      <div class="push">
         <label for="subject">Subject</label>
-        <select id="subject">
+        <select id="subject" name="_subject">
         <option>Get a quote!</option>
         <option>General question</option>
         <option>Just to talk</option>
       </select>
       </div>
 
-      <div>
+      <div class="push">
         <label for="details">What's up?</label>
-        <textarea id="details" required></textarea>
+        <textarea id="details" name="message" required></textarea>
       </div>
 
       <div>
-        <button type="submit">Send message</button>
+        <button class="btn btn-light mega" type="submit">Send message</button>
       </div>
 
     </form>
   </div>
 </section>
-
 
 </body>
 </html>
